# aoc-2024

./: .gitignore  Cargo.toml  README.md
2024/: Cargo.toml
2024/src/: day4.rs  day5.rs  lib.rs
2024/src/util/: vec2.rs
aoc_2024/: Cargo.toml
aoc_2024/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs
everyone-codes/: Cargo.toml
everyone-codes/src/: lib.rs  main.rs
src/: day1.rs  day2.rs  day5.rs  lib.rs  main.rs  template.txt
src/template/: aoc_cli.rs  day.rs  timings.rs
src/util/: mod.rs  vec2.rs
util/src/: lib.rs  range.rs  vec2.rs
