[package]
name = "aoc_2024"
version = "0.11.0"
authors = ["Mukul Agarwal"]
edition = "2021"
default-run = "aoc_2024"
publish = false

[profile.release]

opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
hashbrown = { version = "0.15.2", features = ["rayon"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
memoize = "0.4.2"
num = "0.4.3"
partitions = "0.2.4"
pico-args = "0.5.0"
pretty_assertions = "1.4.1"
rayon = "1.10.0"
regex = "1.11.1"
tinyjson = "2.5.1"
util = "0.1.3"

# Solution dependencies
